sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:14: error: not found: type int
def sauter(j:int, i:int, indLastValue:Int, v:Int){
             ^AlgInsertionSort:14: error: not found: type int
def sauter(j:int, i:int, indLastValue:Int, v:Int){
                    ^AlgInsertionSort:8: error: not found: value j
    sauter(j, i, indLastValue, v);
           ^AlgInsertionSort:18: error: reassignment to val
      indLastValue = i-j-1; 
                   ^